# conformal-multiverse

./: .gitignore  README.md  analysis_descriptive.ipynb  analysis_setup_cp.ipynb  analysis_var_imp_overall.ipynb  analysis_var_imp_replications.ipynb  analysis_visualizations.ipynb  descriptive_stats.ipynb  multiverse_analysis.py  pyproject.toml  universe_analysis.ipynb
fairness_multiverse/: analysis.py  conformal.py  multiverse.py  universe.py
multiclass/: 00b_preprocess_MULTI.R  analysis_setup_cp.ipynb  analysis_var_imp_overall.ipynb  analysis_var_imp_replications.ipynb  analysis_visualizations.ipynb  multiverse.py  universe.ipynb
test/: test_conformal.py  test_integration.py
