[project]
name = "conformal-multiverse"
version = "0.0.1"
requires-python = "==3.10.0"
dependencies = [
    "fairlearn",
    "scikit-learn==1.1.3",
    "papermill",
    "matplotlib",
    "ipywidgets",
    "plotly",
    "eli5",
    "nbstripout==0.5.0",
    "notebook",
    "tqdm",
    "numpy==1.23",
    "pandas==1.4.4",
    "smac",
    "pip",
    "configspace",
    "fairness-multiverse",
    "fanova",
    "multiversum>=0.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel",
    "black",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
fairness-multiverse = { path = "./fairness_multiverse", editable = true }
